--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,7 @@ title: dzharikhin pages
 description: some static pages
 repository: dzharikhin/dzharikhin.hithub.io
 encoding: UTF-8
+gems:
+  - jekyll-github-metadata
 plugins:
   - jekyll-github-metadata
